// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clicking the action icon should open a popover that displays the given actions 1`] = `
Array [
  <div
    class="backdrop fixed"
    role="button"
  />,
  <div
    class="container"
  >
    <ul
      class="menu"
      style="top: 10px; left: 10px; position: fixed; pointer-events: auto;"
    >
      <li>
        <button
          class="action"
        >
          <span
            aria-label="su-test-1"
            class="su-test-1 icon"
          />
          Test Action 1
        </button>
      </li>
      <li
        class="divider"
      />
      <li>
        <button
          class="action"
        >
          <span
            aria-label="su-test-2"
            class="su-test-2 icon"
          />
          Test Action 2
        </button>
      </li>
      <li>
        <button
          class="action"
        >
          <span
            aria-label="su-test-3"
            class="su-test-3 icon"
          />
          Test Action 3
        </button>
      </li>
    </ul>
  </div>,
]
`;

exports[`Render a collapsed block 1`] = `
<section
  class="block"
  role="switch"
>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="icons"
      >
        <span
          aria-label="su-eye"
          class="su-eye"
        />
        <span
          aria-label="su-people"
          class="su-people"
        />
      </div>
      <span
        aria-label="su-expand-vertical"
        class="su-expand-vertical"
      />
    </header>
    <article
      class="children"
    >
      Some block content
    </article>
  </div>
</section>
`;

exports[`Render an block without dragHandle or collapse or expand button 1`] = `
<section
  class="block expanded"
  role="switch"
>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="iconButtons"
      />
    </header>
    <article
      class="children"
    >
      Some block content
    </article>
  </div>
</section>
`;

exports[`Render an expanded block with a multiple types 1`] = `
<section
  class="block expanded"
  role="switch"
>
  <div
    class="handle"
  >
    <span>
      Test
    </span>
  </div>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="types"
      >
        <div
          class="select"
          role="none"
        >
          <button
            class="displayValue default"
            type="button"
          >
            <div
              aria-label="Type1"
              class="croppedText"
              title="Type1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Typ
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  e1
                </span>
              </div>
              <div
                class="whole"
              >
                Type1
              </div>
            </div>
            <span
              aria-label="su-angle-down"
              class="su-angle-down toggle"
            />
          </button>
        </div>
      </div>
      <div
        class="icons"
      >
        <span
          aria-label="su-eye"
          class="su-eye"
        />
        <span
          aria-label="su-people"
          class="su-people"
        />
      </div>
      <div
        class="iconButtons"
      >
        <span
          aria-label="su-cog"
          class="su-cog clickable"
          role="button"
          tabindex="0"
        />
        <span
          aria-label="su-collapse-vertical"
          class="su-collapse-vertical clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article
      class="children"
    >
      Some block content
    </article>
  </div>
</section>
`;
